2003-05-17  Christian Ruppert <arc@users.sf.net>
	* po/Makevars: added file
	* autogen.sh: changed the order of gettextize and aclocal and added
          new args for new gettext versions (don't know at which version they
          changed the behavior, it's changed now and should work with
          gettext 0.11.5 and later)
        * configure.in: removed intl/Makefile po/Makefile.in and po/Makefile
          from AC_OUTPUT because gettextize now adds these files regardless
          wether they are there or not which causes problems with
          automake/autoconf.
        * acconfig.h: deleted because it is no longer needed with new versoins
          of gnu autoconf/automake
        * configure.in: changed AC_DEFINEs and AC_DEFINE_UNQUOTEDs to
          compensate for now missing acconfig.h
        * po/*.po: completed headers so that new msgfmt won't complain anymore.

2003-04-17  Christian Ruppert <arc@users.sf.net>
        * uwm/handlers.c (HandleButtonPress): replaced XQueryPointer by
          coordinate calculation from event structure.
        * uwm/move.c (MoveMotion): replaced XQueryPointer by coordinates
          from event structure and XGetMotionEvents() call to get next motion
          event.

2003-04-16  Christian Ruppert <arc@users.sf.net>
	* uwm/special.h: pointer grabs are now confined to the screen's root
	  window to avoid trouble with crashing xfree when running multiheaded
	  multiscreen.

2003-02-09  Christian Ruppert <arc@users.sf.net>
	* uwm/workspaces.c: changed order of UpdateDesktop and SetWSBackground
	  calls in ChangeWS to prevent race condition problem in urdb2gtkd
	  --dump.

2003-01-09  Christian Ruppert <arc@gmx.li>
	* config/urdb: added font resources to set gvim's fixed font correctly.

2002-12-09  Christian Ruppert <arc@gmx.li>
	* configure.in: added language swedish (sv)
	* po/sv.po: added file sent in from David Weinehall <tao@kernel.org>,
	  thanks, David!