@@ -1,2 +1,2 @@
-SUBDIRS= config extras gfx doc lib intl uwm po
+SUBDIRS= config extras gfx doc lib uwm po
 EXTRA_DIST= ude.spec.in INSTALL.redhat REQUIREMENTS INSTALL.UDE 
